Replace .isBlank() with .trim().isEmpty() for JDK8 compliance